ChangeLog for package rkwarddev

## 0.04-1 (2011-10-20)
  - added "about" option to rk.XML.plugin() to overrule pluginmap defaults
  - added rk.plugin.component(), i.e. modularized the component generation, to allow for more than one
    component in rk.plugin.skeleton(), wich subsequently gained the new option "components"
  - fixed dependency definition in rk.XML.about()

## 0.04-0 (2011-10-19)
  - for accurcy and consistency with the docs, the "properties" option changed to "modifiers" in rk.JS.vars()
  - added further property modifiers to the internal validation
  - added class rk.JS.var, including show method
  - added support for class rk.JS.var in rk.paste.JS() an id()
  - rk.JS.vars() now returns a list of class rk.JS.var
  - added support for all valid modifiers to rk.XML.convert() and rk.XML.connect()

## 0.03-7 (2011-10-18)
  - added "checkable" and "checked" options to rk.XML.frame()
  - set rk.paste.JS() default level to 2
  - fixed bug in rk.JS.array() (superfluous "=" in generated code)

## 0.03-6 (2011-10-13)
  - lifted rkward package dependecies to 0.5.7 (needed for rk.load.pluginmaps())
  - rk.XML.menu() and rk.plugin.skeleton() can now recursively generate deeper menu structures if you provide it with a list
  - fixed bug in autogeneration of IDs in rk.XML.input() and rk.XML.saveobj()

## 0.03-5 (2011-10-11)
  - rk.XML.tabbook() can now autogenerate IDs without a label
  - fixed bug in autogeneration of IDs in rk.XML.spinbox()
  - shortened syntax of rk.XML.tabbook() tabs are now simply a named list

## 0.03-4 (2011-10-10)
  - added functions rk.XML.code() and rk.XML.help()
  - fixed bug in internal function check.ID() (produced false entry nodes under certain circumstances)
  - fixed bug in rk.XML.pluginmap() for automatic component IDs
  - fixed bug in rk.plugin.skeleton() for cases where XML file exists and is not overwritten, but JS/help
    files need to be generated
  - cleaned up rk.XML.pluginmap() and rk.XML.plugin() hint code